<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">C-Tool</string>
    <string name="user_interface">Interface</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="navbar_title">Navigation</string>
    <string name="toggles_title">Statusbar toggles</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="empty">Empty</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="themes_title">Themes</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="device_tools_title">Device tool</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="color_default">Default</string>
    <string name="lock_screen_title">Lock screen</string>
    <string name="lock_screen_general_category">General</string>
    <string name="lock_screen_buttons_category">Buttons</string>
    <string name="lock_screen_targets_category">Targets</string>
    <string name="lock_screen_ad_category">Active Display</string>
    <string name="lock_screen_advanced_category">Advanced</string>
    <string name="lockscreen_target_info">Drag the slider to targets to assign shortcuts</string>
    <string name="lockscreen_target_title">Slider shortcuts</string>
    <string name="lockscreen_target_summary">View or change custom lock screen shortcuts</string>
    <string name="lockscreen_target_reset">Lock screen shortcuts reset to default</string>
    <string name="lockscreen_target_save">Lock screen shortcuts saved</string>
    <string name="lockscreen_target_reset_title">Reset</string>
    <string name="lockscreen_target_reset_message">Delete all user created lock screen shortcuts and restore to default?</string>
    <string name="lockscreen_target_empty">Empty</string>
    <string name="lockscreen_target_edit_title">Edit shortcut and icon</string>
    <string name="lockscreen_target_edit_msg">Select or change the desired application or activity and the associated icon</string>
    <string name="lockscreen_battery_status_title">Battery status</string>
    <string name="lockscreen_battery_status_charging">Only when charging</string>
    <string name="lockscreen_battery_status_alwayson">Always on</string>
    <string name="lockscreen_battery_status_alwaysoff">Always off</string>
    <string name="lockscreen_minimize_challenge_title">Minimize lockscreen challenge</string>
    <string name="lockscreen_minimize_challenge_summary">Set whether the lockscreen challenge (circle, pattern, pin) is minimized when the screen is turned on.</string>
    <string name="battery_around_lockscreen_ring">Battery level around lock ring</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="icon_picker_choose_icon_title">Choose icon</string>
    <string name="icon_picker_alarm">Alarm</string>
    <string name="icon_picker_browser">Browser</string>
    <string name="icon_picker_calendar">Calendar</string>
    <string name="icon_picker_camera">Camera</string>
    <string name="icon_picker_chrome">Chrome</string>
    <string name="icon_picker_email">Email</string>
    <string name="icon_picker_email2">Email Holo</string>
    <string name="icon_picker_facebook">Facebook</string>
    <string name="icon_picker_gallery">Gallery</string>
    <string name="icon_picker_google_small">Google (small)</string>
    <string name="icon_picker_googleplus">Google Plus</string>
    <string name="icon_picker_googletalk">Hangouts</string>
    <string name="icon_picker_maps">Maps</string>
    <string name="icon_picker_movie">Movie</string>
    <string name="icon_picker_music">Music</string>
    <string name="icon_picker_nav_normal">Navigation</string>
    <string name="icon_picker_phone">Phone</string>
    <string name="icon_picker_podcast">Podcast</string>
    <string name="icon_picker_rss">Rss</string>
    <string name="icon_picker_search">Search</string>
    <string name="icon_picker_sms">Messaging</string>
    <string name="icon_picker_twitter">Twitter</string>
    <string name="icon_picker_title">Choose icon source</string>
    <string name="icon_picker_system_icons_title">System icons</string>
    <string name="icon_picker_gallery_title">Gallery</string>
    <string name="icon_picker_pack_title">Icon pack</string>
    <string name="ad_settings_title">Active display</string>
    <string name="ad_settings_summary">Change active display settings</string>
    <string name="ad_enable_title">Enable</string>
    <string name="ad_enable_summary_on">Active display enabled</string>
    <string name="ad_enable_summary_off">Active display disabled</string>
    <string name="ad_text_title">Notification text</string>
    <string name="ad_text_summary">Show the notification text around the ring.</string>
    <string name="ad_all_notifications_title">All notifications</string>
    <string name="ad_all_notifications_summary">Show all notifications including ongoing, non-clearable notifications.</string>
    <string name="ad_hide_low_priority_title">Hide low priority</string>
    <string name="ad_hide_low_priority_summary">Hide low priority notifications such as those from Google Now.</string>
    <string name="ad_pocket_mode_title">Pocket mode</string>
    <string name="ad_pocket_mode_summary">Show active display notifications when you take the device out of your pocket.</string>
    <string name="ad_redisplay_title">Redisplay notifications</string>
    <string name="ad_sunlight_mode_title">Sunlight mode</string>
    <string name="ad_excluded_apps_title">Excluded applications</string>
    <string name="ad_excluded_apps_summary">Excluded applications will not show up in active display.</string>
    <string name="ad_sunlight_mode_summary">Invert the colors when in areas with bright light such as direct sunlight.</string>
    <string name="ad_customizations_title">Customizations</string>
    <string name="ad_brightness_title">Notification brightness</string>
    <string name="ad_brightness_summary">Brightness level for displaying notifications when automatic brightness is not enabled.</string>
    <string name="ad_show_date_title">Show date</string>
    <string name="ad_show_date_summary">Show the date above the clock</string>
    <string name="ad_show_ampm_title">Show AM/PM</string>
    <string name="ad_show_ampm_summary">Show AM/PM indicator next to time when using 12hour format</string>
    <string name="ad_redisplay_never">Never</string>
    <string name="ad_redisplay_1m">1 minute</string>
    <string name="ad_redisplay_5m">5 minutes</string>
    <string name="ad_redisplay_15m">15 minutes</string>
    <string name="ad_redisplay_30m">30 minutes</string>
    <string name="ad_redisplay_1h">1 hour</string>
    <string name="ad_redisplay_2h">2 hours</string>
    <string name="ad_redisplay_5h">5 hours</string>
    <string name="power_widget_title">Power widget</string>
    <string name="title_expanded_widget">Power widget</string>
    <string name="power_widget_behavior">Power widget behavior</string>
    <string name="title_expanded_hide_onchange">Close drawer on change</string>
    <string name="title_expanded_hide_indicator">Hide indicators</string>
    <string name="title_expanded_hide_scrollbar">Hide scrollbar</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">View or change the displayed buttons</string>
    <string name="title_widget_order">Widget button order</string>
    <string name="summary_widget_order">View or change the order of the buttons</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_toggle_wifi">Toggle Wi-Fi</string>
    <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="title_toggle_gps">Toggle GPS</string>
    <string name="title_toggle_sound">Toggle Sound</string>
    <string name="title_toggle_brightness">Toggle Brightness</string>
    <string name="title_toggle_sync">Toggle Sync</string>
    <string name="title_toggle_wifiap">Toggle Wi-Fi AP</string>
    <string name="title_toggle_screentimeout">Toggle Screen timeout</string>
    <string name="title_toggle_mobiledata">Toggle Mobile data</string>
    <string name="title_toggle_lockscreen">Toggle Lock screen</string>
    <string name="title_toggle_networkmode">Toggle 2G/3G</string>
    <string name="title_toggle_autorotate">Toggle Orientation</string>
    <string name="title_toggle_airplane">Toggle Airplane mode</string>
    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
    <string name="title_toggle_sleep">Go to sleep</string>
    <string name="title_toggle_media_play_pause">Media: Toggle Play/Pause</string>
    <string name="title_toggle_media_previous">Media: Skip to Previous</string>
    <string name="title_toggle_media_next">Media: Skip to Next</string>
    <string name="title_toggle_lte">Toggle LTE</string>
    <string name="title_toggle_wimax">Toggle WiMAX</string>
    <string name="title_button_modes">Button modes</string>
    <string name="pref_brightness_mode_title">Brightness modes</string>
    <string name="pref_brightness_mode_summary">View or change the Brightness button modes</string>
    <string name="cm_brightness_mode_auto">Auto</string>
    <string name="cm_brightness_mode_dim">Dim</string>
    <string name="pref_network_mode_title">Network modes</string>
    <string name="pref_screentimeout_mode_title">Screen timeout modes</string>
    <string name="pref_ring_mode_title">Sound modes</string>
    <string name="pref_ring_mode_summary">View or change the Sound button modes</string>
    <string name="cm_sound_mode_silent">Silent</string>
    <string name="cm_sound_mode_vibrate">Vibrate</string>
    <string name="cm_sound_mode_sound">Sound</string>
    <string name="cm_sound_mode_soundVibrate">Sound + Vibrate</string>
    <string name="pref_flash_mode_title">Flash mode</string>
    <string name="expanded_haptic_feedback_title">Haptic feedback</string>
    <string name="power_widget_additional_options_cat">Additional options</string>
    <string name="brightness_location_title">Brightness slider location</string>
    <string name="brightness_slider_top">On top</string>
    <string name="brightness_slider_bottom">On the bottom</string>
    <string name="brightness_slider_none">Don\'t Show</string>
    <string name="power_menu_title">Power menu</string>
    <string name="status_bar_title">Statusbar</string>
    <string name="halo_title">Halo</string>
</resources>